# simple-opengl-renderer

./: .gitattributes  Cargo.toml  README.md
examples/lighting/: main.rs
examples/models/: main.rs
examples/models/assets/: donut.mtl  room.mtl  spoon.mtl  teacup.mtl
examples/simple-3d/: main.rs
src/: camera.rs  lib.rs  window.rs
src/render/: common.rs  gl_errors.rs  gl_shader.rs  light.rs  material.rs  mod.rs  model.rs  renderable.rs  simple_renderer.rs
src/render/ogl/: gl_buffer.rs  gl_index_buffer.rs  gl_mesh.rs  gl_shader.rs  gl_vertex.rs  mod.rs
src/render/ogl/shaders/: shader.frag  shader.vert
src/render/shaders/: shader.frag
tests/: common.rs  shader_tests.rs
