[package]
name = "simple-opengl-renderer"
version = "0.1.0"
authors = ["benc <ben.clare2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14"
cgmath = "0.17"
wavefront_obj = "8.0"
log = "0.4"
glfw = { version = "0.39" }
# TODO: Figure out feature flagged stuff
# glfw = { version = "0.39", optional = true }

# [features]
# window = ["glfw"]

# For examples mostly
[dev-dependencies]
env_logger = "0.7"

